--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,4 @@
 install:
-  - FILE="-Dfile=goong_map_sdk.aar"
-  - mvn install:install-file $FILE -DgroupId=io.goong.goong_map_sdk -DartifactId=goong_sdk -Dversion=1.0 -Dpackaging=aar
+  - FILE="-Dfile=goong_map_sdk-release.aar"
+  - mvn install:install-file $FILE -DgroupId=io.goong.goong_map_sdk -DartifactId=goong_sdk -Dversion=1.1 -Dpackaging=aar
   - -DgeneratePom=true
