--- a/pom.xml
+++ b/pom.xml
@@ -5,5 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.goong.goong_map_sdk</groupId>
     <artifactId>goong_sdk</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.maplibre.gl</groupId>
+            <artifactId>android-sdk</artifactId>
+            <version>11.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
