--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,3 @@
 install:
   - FILE="-Dfile=goong_map_sdk-release.aar"
-  - mvn install:install-file $FILE -DgroupId=io.goong.goong_map_sdk -DartifactId=goong_sdk -Dversion=1.1 -Dpackaging=aar
-  - -DgeneratePom=true
+  - mvn install:install-file $FILE -Dpackaging=aar -DpomFile=pom.xml
