--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <version>1.1</version>
     <dependencies>
         <dependency>
+            <groupId>com.github.goong-io</groupId>
+            <artifactId>goong-map-android-sdk</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
             <groupId>org.maplibre.gl</groupId>
             <artifactId>android-sdk</artifactId>
             <version>11.0.0</version>
