--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install:
   - FILE="-Dfile=goong_map_sdk-release.aar"
-  - mvn install:install-file $FILE -Dpackaging=aar -DpomFile=pom.xml
+  - mvn install:install-file $FILE -Dpackaging=aar -DpomFile=pom-default.xml
